--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "firebase": "^7.14.2",
     "intro": "^1.0.0",
     "parcel-bundler": "^1.12.4",
-    "react": "^16.8.0",
-    "react-dom": "^16.8.0",
+    "prop-types": ">=15.7.0",
+    "react": ">=16.8.0",
+    "react-countdown-circle-timer": "^2.1.1",
+    "react-dom": ">=16.8.0",
     "react-use": "^14.2.0",
     "reset-css": "^5.0.1",
     "utils": "^0.3.1"
